# Python-ini-configuration-parser

./: .gitignore  README.md  example.ini  example.py  pyproject.toml
.github/workflows/: script.yaml
conf/: configer.py  configure.py
configuration_parser/configure/: parser.py
configure/: __init__.py  parser.py
errors/: __init__.py  error.py  exceptions.py
examples/: test.py
ini_configuration_parser/configure/: __init__.py  parser.py
ini_configuration_parser/errors/: __init__.py  error.py
ini_parser/configure/: __init__.py  parser.py
ini_parser/errors/: __init__.py
pyini_parser/: __init__.py
pyini_parser/configure/: __init__.py  parser.py
pyini_parser/errors/: __init__.py  error.py
src/configure/: parser.py
src/errors/: error.py
tests/: test_read.py  test_section_name.py  test_sections.py  test_write.py
