[tool.poetry]
name = "pyini-parser"
version = "0.3.0"
description = ""
authors = ["Mahmoud Emad <mahmmoud.hassanein@gmail.com>"]
keywords = ["parser", "ini", "ini_parser", "configuration"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Mahmoud-Emad/ini-configuration-parser"
repository = "https://github.com/Mahmoud-Emad/ini-configuration-parser"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
