[tool.poetry]
name = "pyini-parser"
version = "0.7.0"
description = ""
authors = ["Mahmoud Emad <mahmmoud.hassanein@gmail.com>"]
keywords = ["parser", "ini", "ini_parser", "configuration"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Mahmoud-Emad/ini-configuration-parser"
repository = "https://github.com/Mahmoud-Emad/ini-configuration-parser"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
